--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,12 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.1.0-SNAPSHOT'
+    id 'org.springframework.boot' version '3.2.5'
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
-group 'com.example'
-version '1.0-SNAPSHOT'
-
-sourceCompatibility = 17
+group = 'com.example'
+version = '1.0-SNAPSHOT'
+sourceCompatibility = '17'
 
 repositories {
     mavenCentral()
@@ -17,8 +16,9 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '7.3'
-    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'
-    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
-    implementation "javax.annotation:javax.annotation-api:1.3.2"
+    implementation 'net.logstash.logback:logstash-logback-encoder:7.3'
+    implementation 'mysql:mysql-connector-java:8.0.33'
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    testImplementation 'junit:junit:4.13.2'
 }
+
